task1/reactServer.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactservice
  labels:
    svclbl: react-svc
spec:
  type: NodePort
  ports:
    - nodePort: 30000
      port: 3000
      targetPort: 3000
  selector:
    type: reactapp
